<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layout_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/language"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/english" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_navigate_next" />

            </LinearLayout>

            <TextView
                android:gravity="center"
                android:text="@string/Login_message"
                android:textColor="@color/grey"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <ImageView
                    android:layout_margin="2dp"
                    android:id="@+id/facebook_signIn"
                    android:src="@drawable/ic_facebook"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDescription" />

                <ImageView
                    android:layout_margin="2dp"
                    android:id="@+id/twitter_signIn"
                    android:src="@drawable/ic_twitter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"/>

                <ImageView
                    android:layout_margin="2dp"
                    android:id="@+id/google_signIn"
                    android:src="@drawable/ic_gmail"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"/>

            </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <View
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="0.1dp"
                android:background="@color/light_grey"/>

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/circle"
                android:text="@string/OR"
                android:padding="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="0.1dp"
                android:background="@color/light_grey"/>

        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:gravity="start"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/iv_email_cross"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_cross_with_bg"
                    android:contentDescription="@string/contentDescription" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Password" />

            <RelativeLayout
                android:layoutDirection="ltr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/iv_password_visible"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_hide"
                    android:contentDescription="@string/contentDescription" />
            </RelativeLayout>


            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/progress_bar"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/grey"
                android:text="@string/dont_have_account" />

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/button_signUp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <View
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="0.1dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="@string/OR"
                    android:padding="15dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="0.1dp"
                    android:background="@color/light_grey"/>

            </LinearLayout>

            <Button
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/button_guest_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_button"
                android:text="@string/guest_user"
                android:textAllCaps="false"
                android:textColor="#fff" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>