...
    <string name="email_hint">example@saman.com</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="update">Update</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="no">No</string>
    <string name="OR">OR</string>
    <string name="Okay">Okay</string>
    <string name="ud_store">UD Store</string>
    <string name="upload_photos">Upload\nPhotos</string>
    <string name="dummy">Lige Brand Men Watches Automatic</string>
    <string name="write_here">Enter your messagee</string>
    <string name="search">Search</string>
    <string name="search_query">Search Field Empty, Please write something to search</string>
...
    <string name="email_required">Email is required</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password_required">Password is required</string>
    <string name="confirm_password_required">Confirm Password is required</string>
    <string name="password_short">Minimum 6 characters required</string>
    <!-- <string name="password_short">Password is too short</string>-->
    <string name="try_again">Try Again</string>
    <string name="okay">Okay</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="view_bag">View Bag</string>
    <string name="item_added_bag">An Item Has Been Added to Your bag</string>
    <string name="item_added_message">What do you want to do now?</string>
    <string name="close">Close</string>
...
